Bug 265709 - Configure Toolbars: DnD of a toolbar item makes a filter ineffective
Summary: Configure Toolbars: DnD of a toolbar item makes a filter ineffective
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kedittoolbar (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: investigated
Depends on:
Blocks:
 
Reported: 2011-02-07 18:09 UTC by Frank Steinmetzger
Modified: 2011-02-21 22:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2011-02-07 18:09:27 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux



Reproducible: Always

Steps to Reproduce:
- open the “Configure toolbars” window of an application
- enter a filter term into a filter edit
- drag a toolbar item from one side to the other

Actual Results:  
The filtered list now shows all its items again, not only those that apply to the filter. The text in the filter edit remains unaffected.

Expected Results:  
The list should continue displaying only the filtered list of items.
Comment 1 Frank Reininghaus 2011-02-09 18:52:43 UTC
Thanks for the report, I can confirm in master.
Comment 2 Frank Reininghaus 2011-02-21 20:11:10 UTC
I think I've found a fix for the bug - review request at

https://git.reviewboard.kde.org/r/100709/
Comment 3 Frank Reininghaus 2011-02-21 22:11:55 UTC
Git commit 014483ecb32a19864add5aae00db51504ab78626 by Frank Reininghaus.
Committed on 21/02/2011 at 19:29.
Pushed by freininghaus into branch 'master'.

KListWidgetSearchLine: filter items that are inserted or changed

Up to now, the search line only filters items that are in the widget at
the time a search is started. With this commit, items that are added
or modified later are filtered as well. Unit test included

Cherry-picked from commit abc9c4c67cf5a25d0f279beedc81727cca154cad

BUG: 265709
FIXED-IN: 4.6.1

M  +68   -30   kdeui/itemviews/klistwidgetsearchline.cpp     
M  +3    -0    kdeui/itemviews/klistwidgetsearchline.h     
M  +1    -0    kdeui/tests/CMakeLists.txt     
A  +80   -0    kdeui/tests/klistwidgetsearchlinetest.cpp         [License: GPL (v2+)]

http://commits.kde.org/kdelibs/014483ecb32a19864add5aae00db51504ab78626